<resources>
    <string name="app_name">myFragmentsTraining</string>
    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="empty">Пустой список</string>

    <string-array name="Contacts">
        <item>Никто</item>
        <item>Мура</item>
        <item>Мама</item>
        <item>Папа</item>
    </string-array>

    <string name="helloCheckBox">Привет! Как дела? </string>
    <string name="loveCheckBox">Я тебя люблю! </string>
    <string name="betterCheckBox">Ты - лучше всех! </string>
    <string name="youAreCheckBox">Как здорово, что ты есть!</string>


</resources>
